# uv2nix

./: .gitignore  README.md  flake.nix  renovate.json
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: nix-github-actions.yml
ci/: flake.nix
dev/: arpeggio.patch  build-system-overrides.nix  build-systems.nix  checks.nix  patching-deps.nix
doc/: book.toml
doc/src/: FAQ.md  SUMMARY.md  conflicts.md  install.md  introduction.md  old-nixpkgs.md  templates.md
doc/src/lib/: overlays.md
doc/src/overriding/: overrides-sdist.nix
doc/src/patterns/: advanced-build-systems.md  applications.md  dist.md  nixpkgs-wheels.md  overriding-build-systems.md  patching-deps.md  private-deps.md  scripts.md  source-filtering.md  testing.md  workspace-members.md
doc/src/patterns/cross/: build-depends.nix  build-systems.nix  index.md
doc/src/patterns/development-scripts/: flake.nix
doc/src/patterns/testing/: flake.nix  pyproject.toml
doc/src/usage/: getting-started.md  inline-metadata.md
lib/: build.nix  default.nix  fetchers.nix  lock1.nix  overlays.nix  scripts.nix  test.nix  test_build.nix  test_fetchers.nix  test_lock1.nix  test_overlays.nix  test_scripts.nix  test_workspace.nix  test_workspace_members.nix  workspace.nix
lib/expected/: lock1.filterPackage.testDevDeps.json  lock1.filterPackage.testMultiChoicePackage.json  lock1.filterPackage.testOptionalDeps.json  lock1.parseLock.testConflicts.json  lock1.parseLock.testDynamic-version.json  lock1.parseLock.testKitchenSinkA.json  lock1.parseLock.testKitchenSinkCEditable.json  lock1.parseLock.testMultiChoicePackage.json  lock1.parseLock.testMultiPythons.json  lock1.parseLock.testNo-binary-no-build.json  lock1.parseLock.testNo-binary.json  lock1.parseLock.testNo-build-no-binary-packages.json  lock1.parseLock.testNo-build.json  lock1.parseLock.testOptionalDeps.json  lock1.parseLock.testTrivial.json  lock1.parseLock.testWith-required-markers.json  lock1.parseLock.testWithResolverOptions.json  lock1.parseLock.testWithSupportedEnvironments.json  lock1.parseLock.testWithToolUvDevDeps.json  lock1.parseLock.testWorkspace.json  lock1.parseLock.testWorkspaceFlat.json  lock1.parsePackage.testGitURL.json  lock1.parsePackage.testLocal.json  lock1.parsePackage.testLocalEditable.json  lock1.parsePackage.testLocalSdist.json  lock1.parsePackage.testMetadataRequiresDistMany.json  lock1.parsePackage.testSdistURL.json  lock1.parsePackage.testTrivial.json  lock1.parsePackage.testWheelURL.json  lock1.parsePackage.testWithExtra.json  lock1.parsePackage.testWithResolutionMarkers.json  lock1.parsePackage.testWithResolverOptions.json  lock1.resolveDependencies.testDevDeps.json  lock1.resolveDependencies.testMultiChoicePackage.json  lock1.resolveDependencies.testMultiPythons.json  lock1.resolveDependencies.testResolveKitchenSink.json  lock1.resolveDependencies.testResolveNoOptionals.json  lock1.resolveDependencies.testTrivial.json  workspace.loadConfig.testNo-binary-no-build.json  workspace.loadConfig.testNo-binary.json  (+8 more)
lib/fixtures/: update.py
lib/fixtures/conflicts/: pyproject.toml
lib/fixtures/conflicts-index/: README.md  pyproject.toml
lib/fixtures/conflicts-index/src/conflicts_index/: __init__.py
lib/fixtures/conflicts/src/conflicts/: __init__.py
lib/fixtures/dependency-group-conflicts/: pyproject.toml
lib/fixtures/dynamic-version/: hello.py  pyproject.toml
lib/fixtures/dynamic-version/dynamic_version.egg-info/: PKG-INFO  SOURCES.txt
lib/fixtures/git-subdirectory/: pyproject.toml
lib/fixtures/git-subdirectory/src/git_subdirectory/: __init__.py
lib/fixtures/inline-metadata/: config.py  trivial.py
lib/fixtures/no-compile-bytecode/: pyproject.toml
lib/fixtures/no-compile-bytecode/src/no_compile_bytecode/: __init__.py
lib/fixtures/simple-workspace/: pyproject.toml
lib/fixtures/simple-workspace/src/simple_workspace/: __init__.py
lib/fixtures/trivial/: pyproject.toml
lib/fixtures/url-subdirectory/: pyproject.toml
lib/fixtures/url-subdirectory/src/url_subdirectory/: __init__.py
lib/fixtures/with-config-settings/: pyproject.toml
lib/fixtures/with-config-settings/src/with_config_settings/: __init__.py
lib/fixtures/with-extra-build-dependencies/: pyproject.toml
lib/fixtures/with-extra-build-dependencies/src/with_extra_build_dependencies/: __init__.py
lib/fixtures/with-extra-build-variables/: pyproject.toml
lib/fixtures/with-extra-build-variables/src/with_extra_build_variables/: __init__.py
lib/fixtures/with-required-markers/: pyproject.toml
lib/fixtures/with-tool-uv-environments/: pyproject.toml
lib/fixtures/with-tool-uv-environments/src/with_tool_uv_environments/: __init__.py
lib/fixtures/workspace-members/: pyproject.toml
lib/fixtures/workspace-members-test/: pyproject.toml
lib/fixtures/workspace-members-test/apps/cli/: pyproject.toml
lib/fixtures/workspace-members-test/apps/cli/src/cli/: __init__.py
lib/fixtures/workspace-members-test/src/workspace_members_test/: __init__.py
lib/fixtures/workspace-virtual-root/: pyproject.toml
lib/fixtures/workspace-with-legacy/: pyproject.toml
lib/fixtures/workspace-with-legacy/src/workspace/: __init__.py
lib/fixtures/workspace-with-legacy/src/workspace_with_legacy/: __init__.py
npins/: default.nix
pkgs/uv-bin/: default.nix  srcs.json  update.py
templates/django-webapp/: flake.nix
templates/django-webapp-v2/: flake.nix  pyproject.toml  pythonSets.nix
templates/django-webapp-v2/nix/checks/: default.nix
templates/django-webapp-v2/nix/devShells/: default.nix
templates/django-webapp-v2/nix/devShells/django-webapp/: default.nix
templates/django-webapp-v2/nix/lib/: default.nix
templates/django-webapp-v2/nix/nixosModules/: default.nix
templates/hello-tkinter/: flake.nix  pyproject.toml
templates/hello-tkinter/src/hello_tkinter/: __init__.py
templates/hello-world/: flake.nix  pyproject.toml
templates/inline-metadata/: flake.nix
templates/inline-metadata/scripts/: example.py
templates/workspace-example/: README.md  flake.nix  pyproject.toml
templates/workspace-example/src/myapp/: __init__.py
(+1 files in other folders)
