[project]
name = "myapp"
version = "0.1.0"
description = "Example workspace demonstrating native UV support"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4,<5",
    "click>=8.1.0",
]

[tool.uv.sources]
webapp = { workspace = true }
api = { workspace = true }
shared = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
