[project]
name = "git-subdirectory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "adisbladis", email = "adisbladis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "hatchling",
]

[project.scripts]
git-subdirectory = "git_subdirectory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
hatchling = { git = "https://github.com/pypa/hatch.git", subdirectory = "backend", rev = "hatchling-v1.27.0" }
