[project]
name = "no-compile-bytecode"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "adisbladis", email = "adisbladis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[tool.uv]
compile-bytecode = false

[project.scripts]
no-compile-bytecode = "no_compile_bytecode:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
