[project]
name = "simple-workspace"
version = "0.1.0"
description = "Simple workspace with two members"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
]

[tool.uv.workspace]
members = [
    "packages/pkg-a",
    "packages/pkg-b",
]

[tool.uv.sources]
pkg-a = { workspace = true }
pkg-b = { workspace = true }

[tool.uv]
no-build = false
no-binary = false