[project]
name = "with-config-settings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "adisbladis", email = "adisbladis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
with-config-settings = "with_config_settings:main"

[tool.uv]
config-settings = { editable_mode = "compat" }
config-settings-package = { with-config-settings = { foo = "bar" } }

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
