[project]
name = "workspace-members-test"
version = "0.1.0"
description = "Test workspace for member features"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "click",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/*",
]

[tool.uv.sources]
webapp = { workspace = true }
api = { workspace = true }
shared = { workspace = true }
