[project]
name = "workspace-with-legacy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["legacy-package"]

[tool.uv.sources]
legacy-package = { path = "packages/legacy-package", editable = true }

[tool.uv.workspace]
members = ["packages/workspace-*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
